# efficient_ransac

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.md  README.md  environment.yaml  pyproject.toml
configs/: config.yaml
data/: bunny.ply  lille_street_small.ply
efficient_ransac/: __init__.py  addition.cpp  addition.h  bindings.cpp  substraction.py
efficient_ransac/detector/: detector.cpp  detector.h
efficient_ransac/shapes/: bitmap.cpp  bitmap.h  cylinder.cpp  cylinder.h  plane.cpp  plane.h  shape.cpp  shape.h  sphere.cpp  sphere.h
efficient_ransac/utils/: normals.py  pcl_operations.cpp  pcl_operations.h  ply.py  synthetic_shapes.py  timer.h  transforms.py
efficient_ransac/viewer/: viewer.cpp  viewer.h
examples/: example.py  generate_synthetic_cloud.py  preprocess_cloud.py  run_detection.py  run_viewer.py
tests/: test_operations.py
